--- a/exponential_and_polynomial_regression.ipynb
+++ b/exponential_and_polynomial_regression.ipynb
@@ -8,8 +8,8 @@
    "outputs": [],
    "source": [
     "\"\"\"\n",
-    "Today we will be looking at exponential and polynomial regression. They aren't used nearly as much as other types of regression, ",
-    "but they are still interesting. \n",
+    "Today we will be looking at exponential and polynomial regression. They aren't used nearly as much as other types of \n",
+    "regression, but they are still interesting. \n",
     "\"\"\"\n",
     "\n",
     "# let's begin\n",
