--- a/exponential_and_polynomial_regression.ipynb
+++ b/exponential_and_polynomial_regression.ipynb
@@ -9,7 +9,7 @@
    "source": [
     "\"\"\"\n",
     "Today we will be looking at exponential and polynomial regression. They aren't used nearly as much as other types of \n",
-    "regression, but they are still interesting. \n",
+    "regression, but they are still interesting. Keep in mind that they are extremely sensitive to high values with the use of powers. \n",
     "\"\"\"\n",
     "\n",
     "# let's begin\n",
