--- a/deep_learning_example.ipynb
+++ b/deep_learning_example.ipynb
@@ -8,8 +8,8 @@
    "outputs": [],
    "source": [
     "\"\"\"\n",
-    "Example of neural networks using the MNIST dataset, which is composed of 70000 28 * 28 grayscale images from 1 - 10. Here we will be\n",
-    "teaching a neural network to learn how to recognize digits.\n",
+    "Example of neural networks using the MNIST dataset, which is composed of 70000 28 * 28 grayscale images from 1 - 10. Here \n",
+    "we will be teaching a neural network to learn how to recognize digits.\n",
     "\n",
     "This is probably the trickiest module in SeaLion to learn given how many classes \n",
     "you'll be working with - so I hope this tutorial will make it clear. \n",
