--- a/examples/ensemble_learning.ipynb
+++ b/examples/ensemble_learning.ipynb
@@ -10,7 +10,7 @@
     "\"\"\"\n",
     "Today we will look at ensemble learning, which is an often undervalued part of machine learning. The way it works is\n",
     "by taking multiple different classifiers, training them, and then averaging their predictions into one \"ensemble\" prediction. \n",
-    "You often want to have a diverse set of classifiers so you can aggregate predictions. The reason this works is because even if you have\n",
+    "You often want to have a diverse set of classifiers so you can aggregate predictions. The reason this works is because even if you have",
     "subpar classifiers with a 60% chance of predicting correctly on their own - as a group together it will increase more \n",
     "and more as long as these classifiers all have different learnt parameters. This can be suprisingly effective. \n",
     "The two algorithms we will look at are Random Forests and Ensemble Classifiers. \n",
