Updating neural network examples
mnist library not working (HTTP Error) so now trying something different to load in data

--- a/examples/deep_learning_example.ipynb
+++ b/examples/deep_learning_example.ipynb
@@ -3,50 +3,47 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "soviet-indonesia",
+   "id": "fancy-score",
    "metadata": {},
    "outputs": [],
    "source": [
     "\"\"\"\n",
-    "Example of neural networks using the MNIST dataset, which is composed of 70000 28 * 28 \n",
-    "grayscale images from 1 - 10. Here we will be teaching a neural network to learn how to \n",
-    "recognize digits. \n",
+    "Example of neural networks using the MNIST dataset, which is composed of 70000 28 * 28 grayscale images from 1 - 10. Here we will be\n",
+    "teaching a neural network to learn how to recognize digits.\n",
+    "\n",
     "This is probably the trickiest module in SeaLion to learn given how many classes \n",
     "you'll be working with - so I hope this tutorial will make it clear. \n",
     "\"\"\"\n",
     "import sealion as sl  # first import this, under sl alias\n",
     "from sealion.neural_networks.optimizers import SGD, Adam  # we'll use these 2, but feel free to try some more\n",
     "from sealion.neural_networks.loss import CrossEntropy  # this is the loss function we'll use (classification problem)\n",
-    "import mnist  # library to load in images\n",
     "from sealion.utils import one_hot  # one_hot function for our data"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "discrete-macro",
+   "id": "joined-stevens",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Step 1 : Load and preprocess data!\n",
     "\n",
-    "X_train = mnist.train_images() / 255.0  # load 60k images in the training set, and divide by 255.0 to normalize from\n",
-    "# 0 -1. This helps with faster convergence.\n",
+    "from tensorflow.keras.datasets import mnist # we'll use this in the interest of time\n",
+    "(X_train, y_train), (X_test, y_test) = mnist.load_data() # unpack it\n",
     "\n",
-    "y_train = one_hot(mnist.train_labels().flatten(),\n",
-    "                  depth=10)  # we one_hot here for the neural network labels. Depth 10 as there are 10 classes : 0,\n",
-    "# 1, 2 ... 9\n",
+    "X_train = X_train / 255.0 # divide by 255 for faster convergence (normalization, if you care about that)\n",
+    "X_test = X_test / 255.0\n",
     "\n",
-    "X_test = mnist.test_images() / 255.0  # same thing here for the test data\n",
-    "y_test = one_hot(mnist.test_labels().flatten(), depth=10)  # and the test labels\n",
-    "\n",
-    "# of course there's a lot we could do here, but lets' move on to Step 2"
+    "# one hot our labels (to make them work with the softmax)\n",
+    "y_train = one_hot(y_train, depth = 10) # 10 classes\n",
+    "y_test = one_hot(y_test, depth = 10)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "referenced-speed",
+   "id": "turkish-treasure",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +61,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "skilled-speed",
+   "id": "listed-graph",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +83,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "offshore-adams",
+   "id": "antique-reserve",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "standard-copyright",
+   "id": "reflected-dealer",
    "metadata": {},
    "outputs": [
     {
@@ -122,14 +119,14 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "sunrise-humanity",
+   "id": "dressed-washer",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Acc : 93.65%: 100%|█████████████████████████████████████████████████| 10/10 [00:37<00:00,  3.75s/it]\n"
+      "Acc : 91.84%: 100%|█████████████████████████████████████████████████| 10/10 [02:54<00:00, 17.48s/it]\n"
      ]
     }
    ],
@@ -142,16 +139,16 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "dynamic-photography",
+   "id": "falling-worship",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loss :  -3.361774235771307\n",
-      "Regression accuracy :  0.8643429668814884\n",
-      "Validation accuracy :  0.9277\n"
+      "Loss :  -3.2098036196336994\n",
+      "Regression accuracy :  0.8697891452159215\n",
+      "Validation accuracy :  0.9315\n"
      ]
     }
    ],
@@ -169,14 +166,14 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "confirmed-bracelet",
+   "id": "balanced-escape",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Acc : 98.51%: 100%|█████████████████████████████████████████████████| 20/20 [03:06<00:00,  9.30s/it]\n"
+      "Acc : 98.29%: 100%|█████████████████████████████████████████████████| 20/20 [11:12<00:00, 33.64s/it]\n"
      ]
     }
    ],
@@ -200,16 +197,16 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "smoking-intermediate",
+   "id": "hidden-technology",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loss :  -1.1328718657530705\n",
-      "Regression accuracy :  0.9482309081917564\n",
-      "Validation accuracy :  0.9757\n"
+      "Loss :  -1.4782596297021773\n",
+      "Regression accuracy :  0.9316249609875145\n",
+      "Validation accuracy :  0.968\n"
      ]
     }
    ],
@@ -224,7 +221,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "early-controversy",
+   "id": "proper-expansion",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -243,7 +240,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "operating-storage",
+   "id": "integral-research",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -258,15 +255,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "modified-douglas",
+   "execution_count": 19,
+   "id": "hungarian-owner",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Acc : 100.0%: 100%|█████████████████████████████████████████████████| 50/50 [06:17<00:00,  7.55s/it]\n"
+      "Acc : 100.0%: 100%|█████████████████████████████████████████████████| 50/50 [24:26<00:00, 29.33s/it]\n"
      ]
     }
    ],
@@ -278,17 +275,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "greatest-reset",
+   "execution_count": 20,
+   "id": "metric-stanley",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loss :  -0.9901115899874395\n",
-      "Regression accuracy :  0.9520294766380892\n",
-      "Validation accuracy :  0.9785\n"
+      "Loss :  -1.0776098235212133\n",
+      "Regression accuracy :  0.9480098712648173\n",
+      "Validation accuracy :  0.9766\n"
      ]
     }
    ],
@@ -300,14 +297,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "driving-things",
+   "execution_count": 21,
+   "id": "otherwise-wellington",
    "metadata": {},
    "outputs": [],
    "source": [
     "# and if you so desire, we can save the weights again.\n",
     "file_name = \"MNIST_weights2\"\n",
-    "model.pickle_params(file_name)\n",
+    "model.pickle_params(file_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "present-corporation",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
     "# there's a ton of stuff we didn't go over!\n",
     "# specifically this is  : \n",
