--- a/examples/more_neural_networks_examples.ipynb
+++ b/examples/more_neural_networks_examples.ipynb
@@ -24,18 +24,16 @@
    "outputs": [],
    "source": [
     "# first let's get MNIST data\n",
-    "import mnist\n",
     "from sealion.utils import one_hot\n",
+    "from tensorflow.keras.datasets import mnist # we'll use this in the interest of time\n",
+    "(X_train, y_train), (X_test, y_test) = mnist.load_data() # unpack it\n",
     "\n",
-    "X_train = mnist.train_images() / 255.0  # load 60k images in the training set, and divide by 255.0 to normalize from\n",
-    "# 0 -1. This helps with faster convergence.\n",
+    "X_train = X_train / 255.0 # divide by 255 for faster convergence (normalization, if you care about that)\n",
+    "X_test = X_test / 255.0\n",
     "\n",
-    "y_train = one_hot(mnist.train_labels().flatten(),\n",
-    "                  depth=10)  # we one_hot here for the neural network labels. Depth 10 as there are 10 classes : 0,\n",
-    "# 1, 2 ... 9\n",
-    "\n",
-    "X_test = mnist.test_images() / 255.0  # same thing here for the test data\n",
-    "y_test = one_hot(mnist.test_labels().flatten(), depth=10)  # and the test labels"
+    "# one hot our labels (to make them work with the softmax)\n",
+    "y_train = one_hot(y_train, depth = 10) # 10 classes\n",
+    "y_test = one_hot(y_test, depth = 10)"
    ]
   },
   {
@@ -112,7 +110,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Acc : 96.0%: 100%|██████████████████████████████████████████████████| 10/10 [01:30<00:00,  9.03s/it]\n"
+      "Acc : 95.84%: 100%|█████████████████████████████████████████████████| 10/10 [05:10<00:00, 31.09s/it]\n"
      ]
     }
    ],
@@ -137,7 +135,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Acc : 97.5%: 100%|██████████████████████████████████████████████████| 10/10 [02:09<00:00, 12.93s/it]\n"
+      "Acc : 93.5%: 100%|██████████████████████████████████████████████████| 10/10 [08:41<00:00, 52.11s/it]\n"
      ]
     }
    ],
@@ -165,7 +163,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Acc : 97.13%: 100%|█████████████████████████████████████████████████| 10/10 [01:51<00:00, 11.14s/it]\n"
+      "Acc : 97.36%: 100%|█████████████████████████████████████████████████| 10/10 [03:49<00:00, 22.94s/it]\n"
      ]
     }
    ],
@@ -189,7 +187,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Acc : 98.23%: 100%|█████████████████████████████████████████████████| 15/15 [00:36<00:00,  2.41s/it]\n"
+      "Acc : 98.23%: 100%|█████████████████████████████████████████████████| 15/15 [01:40<00:00,  6.72s/it]\n"
      ]
     }
    ],
@@ -228,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "serial-disclaimer",
    "metadata": {},
    "outputs": [],
@@ -243,28 +241,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "guided-contents",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[ True  True  True ...  True  True  True]\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "0.8555"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# no progress bar for model.train() given the difficulty of communicating and aggregating progress on multiple cores\n",
     "\n",
@@ -286,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "transparent-arkansas",
    "metadata": {},
    "outputs": [],
