fixing up Dropout + more_neural_network examples

--- a/examples/more_neural_networks_examples.ipynb
+++ b/examples/more_neural_networks_examples.ipynb
@@ -110,7 +110,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Acc : 95.84%: 100%|█████████████████████████████████████████████████| 10/10 [05:10<00:00, 31.09s/it]\n"
+      "Acc : 96.48%: 100%|█████████████████████████████████████████████████| 10/10 [00:39<00:00,  3.94s/it]\n"
      ]
     }
    ],
@@ -135,7 +135,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Acc : 93.5%: 100%|██████████████████████████████████████████████████| 10/10 [08:41<00:00, 52.11s/it]\n"
+      "Acc : 96.0%: 100%|██████████████████████████████████████████████████| 10/10 [00:46<00:00,  4.68s/it]\n"
      ]
     }
    ],
@@ -163,7 +163,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Acc : 97.36%: 100%|█████████████████████████████████████████████████| 10/10 [03:49<00:00, 22.94s/it]\n"
+      "Acc : 97.26%: 100%|█████████████████████████████████████████████████| 10/10 [00:50<00:00,  5.09s/it]\n"
      ]
     }
    ],
@@ -187,7 +187,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Acc : 98.23%: 100%|█████████████████████████████████████████████████| 15/15 [01:40<00:00,  6.72s/it]\n"
+      "Acc : 98.31%: 100%|█████████████████████████████████████████████████| 15/15 [00:20<00:00,  1.36s/it]\n"
      ]
     }
    ],
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "serial-disclaimer",
    "metadata": {},
    "outputs": [],
@@ -241,10 +241,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "guided-contents",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ True  True  True ...  True  True  True]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.844"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# no progress bar for model.train() given the difficulty of communicating and aggregating progress on multiple cores\n",
     "\n",
@@ -266,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "transparent-arkansas",
    "metadata": {},
    "outputs": [],
